--- a/ventana3.html
+++ b/ventana3.html
@@ -4,14 +4,13 @@
 </Head>
 <body bgcolor="black" text="#D69A9A">
 <center><h1><font face="Comic Sans MS">HAPPY BIRTHDAY ♡ </h1>
-<h3>Espero que hoy la pases muy bien, hoy el sol saldrá solamente para ti  ♡ que todos tus sueños se hagan realidad, tus deseos y tus metas. Ojalá yo pueda estar en tu círculo viéndote crecer y mejorar, y si estoy prometo que si caes te ayudaré a levantarté, eso me haría muy feliz,  aunque todos cambiamos en algún momento tienes que prometer que tu lindo corazón no va a cambiar y  seguirás siendo una buena persona. Espero que no te conviertas en un criminal o algo así  porque eres genial y súper cool así que no dejes que nadie apague tu brillo celestial de diosa y te lleve a la oscuridad.
-</h3><h3>Me siento muy bien cuando estoy contigo mi corazón explota cuando me abrazas y mil cuando me das besitos, por eso tienes que saber que te ofrezco todo mi amor y mi atencion,Tengo que confesarte que me tienes reloco, buscando lugares para ir contigo, o pensando en ti en las noche, teniendo esa sensación de que tú y yo nunca fuimos extraños, como te dije me gusta pensar que talvez salvamos el mundo juntos,  repoblamos la tierra después del apocalipsis o fuimos gasters en Tokio , jajaja o mucho mejor Naomy y Andrés en este mundo. por eso espero poder estar a tu lado teniendo pequeñas aventuras. ILY 
-De mi parte te deseo todo lo bueno de este mundo para ti, desde lo más simple a lo más complejo. ¡Y felicidades por haber sobrevivido al 2021 eres una guerrera!!! Ojo cuidado con esa fucking almohada esa. Me pone celoso.</h3><h3>
+<h3>Espero que hoy la pases muy bien, hoy el sol saldrá solamente para ti  ♡ que todos tus sueños se hagan realidad, tus deseos y tus metas. Ojalá yo pueda estar en tu círculo viéndote crecer y mejorar, estar ahi por si caes ayudar a levantarté, eso me haría muy feliz,  aunque todos cambiamos en algún momento tienes que prometer que tu lindo corazón no va a cambiar y  seguirás siendo una buena persona. Espero que no te conviertas en un criminal o algo así  porque eres genial y súper cool así que no dejes que nadie apague tu brillo celestial de diosa y te lleve a la oscuridad mi florecita.♡ 
+</h3><h3>
 
 
 
 ♡
-feliz cumpleaños. Te quiero mucho mucho mucho</h3>
+feliz cumpleaños Naomy. Te quiero mucho mucho mucho♡</h3>
 
 
 
