--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <center><table><tr><td><title>HAPPY BIRTHDAY !!</title>
 </Head>
-<body bgcolor="white" text="#D69A9A">
+<body bgcolor="D69A9A" font="#black">
 <center><h1><font face="Dubai">Dale al regalo! </font></h1><center>
-<a href="ventana2.html"><img src="30B.jpg" alt="cuidaoo"img width="150"</a>
+<a href="ventana2.html"><img src="gift.png" img width="900" alt="cuidaoo"</a>
 
 </center>
 </table>
