--- a/ventana2.1.html
+++ b/ventana2.1.html
@@ -4,11 +4,11 @@
 </Head>
 <body bgcolor="D69A9A" 
 font="#black">
-<center><h1><font face="Dubai">Otra vez
+<center><h1><font face="Dubai">Again
 
 
-<a href="ventana2.1.html">
-<img src="gift2.png" img width="800"
+<a href="ventana2.2.html">
+<img src="gift3.png" img width="700"
 </a>
 
 
