--- a/ventana2.4.html
+++ b/ventana2.4.html
@@ -4,11 +4,11 @@
 </Head>
 <body bgcolor="D69A9A" 
 font="#black">
-<center><h1><font face="Dubai">Otra vez
+<center><h1><font face="Dubai">i
 
 
-<a href="ventana2.1.html">
-<img src="gift2.png" img width="800"
+<a href="ventana2.5.html">
+<img src="gift6.png" img width="400"
 </a>
 
 
