--- a/ventana2.6.html
+++ b/ventana2.6.html
@@ -4,11 +4,11 @@
 </Head>
 <body bgcolor="D69A9A" 
 font="#black">
-<center><h1><font face="Dubai">Otra vez
+<center><h1><font face="Dubai">e
 
 
-<a href="ventana2.1.html">
-<img src="gift2.png" img width="800"
+<a href="ventana3.html">
+<img src="gift8.png" img width="200"
 </a>
 
 
