--- a/ventana2.2.html
+++ b/ventana2.2.html
@@ -4,11 +4,11 @@
 </Head>
 <body bgcolor="D69A9A" 
 font="#black">
-<center><h1><font face="Dubai">Otra vez
+<center><h1><font face="Dubai">A
 
 
-<a href="ventana2.1.html">
-<img src="gift2.png" img width="800"
+<a href="ventana2.3.html">
+<img src="gift4.png" img width="600"
 </a>
 
 
