--- a/ventana2.3.html
+++ b/ventana2.3.html
@@ -4,11 +4,11 @@
 </Head>
 <body bgcolor="D69A9A" 
 font="#black">
-<center><h1><font face="Dubai">Otra vez
+<center><h1><font face="Dubai">o
 
 
-<a href="ventana2.1.html">
-<img src="gift2.png" img width="800"
+<a href="ventana2.4.html">
+<img src="gift5.png" img width="500"
 </a>
 
 
