--- a/ventana2.5.html
+++ b/ventana2.5.html
@@ -4,11 +4,11 @@
 </Head>
 <body bgcolor="D69A9A" 
 font="#black">
-<center><h1><font face="Dubai">Otra vez
+<center><h1><font face="Dubai">u
 
 
-<a href="ventana2.1.html">
-<img src="gift2.png" img width="800"
+<a href="ventana2.6.html">
+<img src="gift7.png" img width="300"
 </a>
 
 
