--- a/ventana3.html
+++ b/ventana3.html
@@ -2,7 +2,7 @@
 <head>
 <center><table><tr><td><title>HAPPY BIRTHAY !!</title>
 </Head>
-<body bgcolor="black" text="#D69A9A">
+<body bgcolor="D69A9A" <font="#black">
 <center><h1><font face="Comic Sans MS">HAPPY BIRTHDAY ♡ </h1>
 <h3>Espero que hoy la pases muy bien, hoy el sol saldrá solamente para ti  ♡ que todos tus sueños se hagan realidad, tus deseos y tus metas. Ojalá yo pueda estar en tu círculo viéndote crecer y mejorar, estar ahi por si caes ayudar a levantarté, eso me haría muy feliz,  aunque todos cambiamos en algún momento tienes que prometer que tu lindo corazón no va a cambiar y  seguirás siendo una buena persona. Espero que no te conviertas en un criminal o algo así  porque eres genial y súper cool así que no dejes que nadie apague tu brillo celestial de diosa y te lleve a la oscuridad mi florecita.♡ 
 </h3><h3>
