--- a/ventana3.html
+++ b/ventana3.html
@@ -11,7 +11,7 @@
 
 ♡
 feliz cumpleaños Naomy. Te quiero mucho mucho mucho♡</h3>
-
+<h3> TQM aunque se que nunca volveras a abrir esto, estoy muy consiente de que el del error fui yo, y aunque hoy me duele en el fondo del corzon no puedo hacer nada , solo puedo seguir sintiendo este dolor en el pecho y   mis propias manos en mi cuello ahorcandome , por lo tonto que soy, no quiero justificarme pero comprendo que yo soy el inmaduro y tu me olvidaras pronto por eso, demonios yo de verdad qeu te queria y cada dia que no te hable era como poner acido en mi corazon, por este maldito orgullo de mierda que ahora se que es una maldita maldicion, que me ah arrebatado todo lo que mas queria. de todas formas me tendre que resignar a dejarte ir , aunque me sienta como un carajo , tendre que olvidarte ppara no sufrir, pero si ves esto nunca te dejare de llevarf en el fondo de mi  alma, y talvez salvemos china en otra vida, teniendo las aventuras en esta , te quiero  :C </h3>
 
 
 <img src="cora.png" img width="100"> 
