--- a/ventana3.html
+++ b/ventana3.html
@@ -4,14 +4,7 @@
 </Head>
 <body bgcolor="D69A9A" <font="#black">
 <center><h1><font face="Comic Sans MS">HAPPY BIRTHDAY ♡ </h1>
-<h3>Espero que hoy la pases muy bien, hoy el sol saldrá solamente para ti  ♡ que todos tus sueños se hagan realidad, tus deseos y tus metas. Ojalá yo pueda estar en tu círculo viéndote crecer y mejorar, estar ahi por si caes ayudar a levantarté, eso me haría muy feliz,  aunque todos cambiamos en algún momento tienes que prometer que tu lindo corazón no va a cambiar y  seguirás siendo una buena persona. Espero que no te conviertas en un criminal o algo así  porque eres genial y súper cool así que no dejes que nadie apague tu brillo celestial de diosa y te lleve a la oscuridad mi florecita.♡ 
-</h3><h3>
-
-
-
-♡
-feliz cumpleaños Naomy. Te quiero mucho mucho mucho♡
-TQM aunque se que nunca volveras a abrir esto, estoy muy consiente de que el del error fui yo, y aunque hoy me duele en el fondo del corzon no puedo hacer nada , solo puedo seguir sintiendo este dolor en el pecho y   mis propias manos en mi cuello ahorcandome , por lo tonto que soy, no quiero justificarme pero comprendo que yo soy el inmaduro y tu me olvidaras pronto por eso, demonios yo de verdad qeu te queria y cada dia que no te hable era como poner acido en mi corazon, por este maldito orgullo de mierda que ahora se que es una maldita maldicion, que me ah arrebatado todo lo que mas queria. de todas formas me tendre que resignar a dejarte ir , aunque me sienta como un carajo , tendre que olvidarte ppara no sufrir, pero si ves esto nunca te dejare de llevarf en el fondo de mi  alma, y talvez salvemos china en otra vida, teniendo las aventuras que en esta no tuvimos , te quiero  :C </h3>
+<h3> NOT FOUD XD
 
 
 
